--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,40 @@
 <html>
+    <head>
+        <title>
+            Article one | Saneen Nazar
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>Article one</h3>
+        <div>
+            September 27 2016
+        </div>
+        <div>
+            <p>
+                Hello everyone this is my first article on my web app
+                This is the content Hello everyone this is my first article on my web app
+                This is the contentHello everyone this is my first article on my web app
+                This is the contentHello everyone this is my first article on my web app
+                This is the content
+            </p>
+            <p>
+                Hello everyone this is my first article on my web app
+                This is the content Hello everyone this is my first article on my web app
+                This is the contentHello everyone this is my first article on my web app
+                This is the contentHello everyone this is my first article on my web app
+                This is the content
+            </p>
+            <p>
+                Hello everyone this is my first article on my web app
+                This is the content Hello everyone this is my first article on my web app
+                This is the contentHello everyone this is my first article on my web app
+                This is the contentHello everyone this is my first article on my web app
+                This is the content
+            </p>
+        </div>
+    </body>
+</html>
