[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,18 @@
             Article one | Saneen Nazar
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color: grey;
+            font-family: impact;
+            
+            
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -36,6 +46,7 @@
                 This is the contentHello everyone this is my first article on my web app
                 This is the content
             </p>
+        </div>
         </div>
     </body>
 </html>
