--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,6 +10,8 @@
             margin: 0 auto;
             color: grey;
             font-family: impact;
+            padding-top: 60px;
+            padding-left: 20px;
             
             
         </style>
