[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am saneen and this is my fisrt webapp.How are you ?
         </div>
+        <script>
+            alert("hi iam javascript");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
