[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,29 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class ="container">
+            <div class="center">
+                <img src="http://ultraimg.com/images/2016/07/29/Simplest-Responsive-jQuery-Image-Lightbox-Plugin-simple-lightbox.jpg" class="img-medium"/>
+            </div>
+              <hr/>
+              <br>
+              <h3>hello</h3>
+             <div>
+                 hi iam snz
+            </div>
+            <div>
+                 <h3>proffession</h3>
+            <div>
+                 under graduate student
+            </div>
+              <hr/>
+            <div class="footer">
+             </div>
+            <div class="center text-big bold">
+                Hi! I am saneen and this is my fisrt webapp.How are you ?
+            </div>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am saneen and this is my fisrt webapp.How are you ?
-        </div>
-        <script>
-            alert("hi iam javascript");
-        </script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
